# pds-mediator

./: CMakeLists.txt  README.md  compile.sh  compile_debug.sh  install_postgresql.sh  trip_37
config/: config.cfg.TEMPLATE
docs_and_scripts/: install_dependencies.sh  install_mongodb.md  install_mongodb_driver.sh  install_postgresql.sh
src/: Main.cpp
src/config/: ConfigParams.h  config_parser.cpp  config_parser.h
src/converter/: Abstract_Converter.h  JSON_Converter.cpp  JSON_Converter.h
src/messages/: messagetype.h
src/messages/request/: DataRequest.h  NextDronePosition.h  Request.h  TripLaunchRequest.h  TripSaveRequest.h  droneData.h  endTripSaveRequest.h  getOnePath.h  getPathList.h
src/messages/response/: EndTripSaveResponse.h  RespReqTrippoints.h  Response.h  StartTripSaveResponse.h  dataRegisterResponse.h  dronePosition.h  onePathResponse.h  respEndTripLaunch.h  respErrorNotif.h  tripLaunchResponse.h
src/mongodb/: MongodbConnection.cpp  MongodbConnection.h
src/network/: TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  memory_utils.hpp
src/postgresql/: PostgresqlConnection.cpp  PostgresqlConnection.h
src/request_analyse/: RequestAnalyser.cpp  RequestAnalyser.h
src/request_executer/: RequestEXecuter.cpp  RequestExecuter.cpp  RequestExecuter.h
src/threads/: Abstract_ThreadClass.cpp  Abstract_ThreadClass.h  AutoPilotThread.cpp  AutoPilotThread.h  ImageSaver_ThreadClass.cpp  ImageSaver_ThreadClass.h
src/threads/bridges/: ImageSaver_MessageHolder.cpp  ImageSaver_MessageHolder.h  ImageToSave.hpp
